--- a/Hotelweb/index.html
+++ b/Hotelweb/index.html
@@ -32,60 +32,60 @@
     <h3 class="top1">Food and Juices</h3>
 <div class="container">
     <div class="cube">Non-Vegetarian
-        <p class="single"><img src="/img/chicken gravy.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/chicken gravy.jpeg" width="200" height="200"></p>
         <div class="disall"> 
-        <p class="single"><img src="/img/crab-curry.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/chic 65.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/fish.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/non-veg.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/crab-curry.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/chic 65.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/fish.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/non-veg.jpg" width="200" height="200"></p>
     </div>
     </div>
     <div class="cube">Vegetarian
-        <p class="single"><img src="/img/pongal.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/pongal.jpg" width="200" height="200"></p>
         <div class="disall"> 
-        <p class="single"><img src="/img/poori.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/South breakfast.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/veg lunch.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/iddiyapam.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/poori.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/South breakfast.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/veg lunch.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/iddiyapam.jpg" width="200" height="200"></p>
     </div>    
     </div>
     <div class="cube">Kids food
-        <p class="single"><img src="/img/kid1.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/kid1.jpeg" width="200" height="200"></p>
         <div class="disall"> 
-        <p class="single"><img src="/img/kid2.jpeg" width="200" height="200"></p>
-        <p class="single"><img src="/img/kid3.jpeg" width="200" height="200"></p>
-        <p class="single"><img src="/img/kid4.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/kid5.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/kid2.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/kid3.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/kid4.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/kid5.jpeg" width="200" height="200"></p>
 
     </div>
     </div>
     <div class="cube"> Cakes
-        <p class="single"><img src="/img/cake1.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/cake1.jpeg" width="200" height="200"></p>
         <div class="disall"> 
-        <p class="single"><img src="/img/cake2.jpeg" width="200" height="200"></p>
-        <p class="single"><img src="/img/cake3.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/cake4.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/cake5.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/cake2.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/cake3.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/cake4.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/cake5.jpg" width="200" height="200"></p>
 
     </div>
     </div>
     <div class="cube">Chats
-        <p class="single"><img src="/img/chaat.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/chaat.jpeg" width="200" height="200"></p>
         <div class="disall"> 
-        <p class="single"><img src="/img/dhahi poori.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/masala poori.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/pav-bhaji1.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/papadi.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/dhahi poori.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/masala poori.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/pav-bhaji1.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/papadi.jpg" width="200" height="200"></p>
 
     </div>
     </div>
     <div class="cube">Juices
-        <p class="single"><img src="/img/pomegranete.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/pomegranete.jpeg" width="200" height="200"></p>
         <div class="disall"> 
-        <p class="single"><img src="/img/orange.jpeg" width="200" height="200"></p>
-        <p class="single"><img src="/img/mango.jpeg" width="200" height="200"></p>
-        <p class="single"><img src="/img/kiwi.jpg" width="200" height="200"></p>
-        <p class="single"><img src="/img/carrot.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/orange.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/mango.jpeg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/kiwi.jpg" width="200" height="200"></p>
+        <p class="single"><img src="/Hotelweb/img/carrot.jpeg" width="200" height="200"></p>
     </div>
     </div>
 </div>
