--- a/Hotelweb/index.html
+++ b/Hotelweb/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel ="stylesheet" href="hotel.css">
-        <h1 class="head">Shivu's Restaurant</h1>
+        <h1 class="head">Restaurant</h1>
         
     </head>
 
